@@ -177,16 +177,14 @@ selection_instantiate(fts_class_t *cl)
 }
 
 
-/***********************************************************************
+/* **********************************************************************
  *
  * Initialization
  *
  */
 
-void fts_selection_config( void)
+void
+fts_kernel_selection_init( void)
 {
   fts_class_install(fts_new_symbol("__selection"), selection_instantiate);
 }
-
-
-
