@@ -194,13 +194,13 @@ thread_manager_instantiate(fts_class_t* cl)
 }
 
 
-/**************************************************
+/* **********************************************************************
  *
- * Initialization of the thread_manager module
+ * Initialization
  *
  */
 void 
-fts_thread_manager_config(void)
+fts_kernel_thread_manager_init(void)
 {
     thread_manager_s_name = fts_new_symbol("thread_manager");
     thread_manager_type = fts_class_install(thread_manager_s_name, thread_manager_instantiate);
